# python_ng

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_async_await.py  test_async_await_perf.py  test_await.py  test_future.py  test_sync.py
.github/workflows/: ci.yml
modules/01_async_programming/examples/: test_async_await.py  test_async_await_perf.py  test_await.py  test_aync.py  test_future.py  test_future_nio.py  test_sync.py
modules/02_decorators/examples/: test_class_decorator.py  test_decorator_nonparam.py  test_decorator_param.py  test_func.py  test_param_decorator.py
modules/02_decorators/exercises/: test_decorator_case.py  test_timer.py  test_website.py
modules/03_functions/examples/: fetch_weather.py  little_functions.py  test_built_in.py  test_closure.py  test_comprehension.py  test_default_param.py  test_function_return.py  test_generator_examples.py  test_generator_send.py  test_generator_simple.py  test_global_var.py  test_job.py  test_lambda.py  test_little_functions.py  test_param.py  test_param_transfer.py  test_simple_functions.py
modules/03_functions/exercises/: create_image_code.py  download_video.py  fetch_weather.py  func_param.py  generate_random_300w.py  resource_download.py  resource_download_v1.py  resource_download_v2.py  test_func_param.py  test_generator.py  test_net.py  test_send_email.py  test_send_multi_email.py  thread_pool_get_video_closure.py  write_weather_info.py
modules/04_exception/examples/: test_exception_deal.py
modules/05_class/examples/: test_call.py  test_class_method.py  test_context_manager.py  test_del_notnow.py  test_del_notuse.py  test_encapsulation.py  test_inheritance.py  test_parent.py  test_private_var.py  test_protocol.py  test_repr.py  test_string_io.py  test_super_init.py  test_super_mro.py  test_typevar.py  test_union.py
modules/05_class/exercises/: test_convention_composition_inheritance.py  test_singleton.py
tests/: test_match_case.py  test_param.py
