[project]
name = "python-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "black>=26.1.0",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
