[project]
name = "python-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "black>=26.1.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
target-version = ["py313"]
line-length = 88
